# felico

./: Cargo.toml  README.md
.github/workflows/: ci.yml  compile.yml
.run/: All Tests (UPDATE_EXPECT=1).run.xml
arena/: Cargo.toml
arena/src/: lib.rs  typed_arena.rs
ast/: Cargo.toml
ast/src/: ast_node.rs  compilation_unit.rs  expression.rs  fun_definition.rs  identifier.rs  lib.rs  statement.rs  test_print.rs
base/: Cargo.toml
base/src/: error.rs  lib.rs  result.rs  source_excerpt.rs  source_file.rs  source_span.rs  value.rs
bundles/: test.felico
bytecode/: Cargo.toml  bytecode.md
bytecode/src/: instruction.rs  lib.rs  module.rs  module_builder.rs  op_code.rs  operand.rs  slot.rs
compiler/: Cargo.toml
compiler/src/: lib.rs
compiler/src/backend/c/: c_backend.rs  c_code_generator.rs  c_compiler.rs  mod.rs
compiler/src/frontend/: mod.rs
compiler/src/frontend/ast/: expr.rs  mod.rs  module.rs  node.rs  print_ast.rs  qualified_name.rs  stmt.rs  types.rs
compiler/src/frontend/compile/: compile_module.rs  mod.rs
compiler/src/frontend/lex/: lexer.rs  token.rs
compiler/src/frontend/parse/: parser.rs
compiler/src/frontend/resolve/: mod.rs  module_manifest.rs  resolver.rs  symbol.rs  symbol_table.rs  type_checker.rs
compiler/src/infra/: arena.rs  diagnostic.rs  full_name.rs  location.rs  mod.rs  result.rs  shared_string.rs  source_file.rs  source_span.rs  test_util.rs
compiler/src/interpret/: core_definitions.rs  environment.rs  eval.rs  interpreter.rs  mod.rs  stack_frame.rs  value.rs
compiler/src/model/: mod.rs  type_factory.rs  types.rs  workspace.rs
compiler/tests/: hello.c  transform_test.rs
compiler/tests/error_test/: error_test.rs
compiler/tests/exec_test/: exec_test.rs  exec_test_c_code.rs
compiler/tests/exec_test/testcases/: control_flow.yaml  expressions.yaml  functions.yaml  simple.yaml  structs.yaml
docui/: README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
docui/e2e/: vue.spec.ts
docui/src/: App.vue
lexer/: Cargo.toml
lexer/src/: lexer.rs  token.rs
parser/: Cargo.toml
parser/src/: parser.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/http/: start_server.rs
server/src/infra/: error.rs
server/src/middleware/: logging_middleware.rs
server/src/model/: bundle.rs  mod.rs  model_facade.rs
source/: Cargo.toml
source/src/: file_location.rs  lib.rs  source_error.rs  source_file.rs  source_message.rs  source_snippet.rs
src/: lib.rs
src/frontend/: mod.rs
src/infra/: diagnostic.rs  location.rs  mod.rs  result.rs  shared_string.rs  source_file.rs
tests/: transform_test.rs
token/: Cargo.toml
vm/: Cargo.toml
web-ui/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
webui/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mts
(+103 files in other folders)
