[package]
name = "felico-server"
version = "0.1.0"
edition = "2021"

[dependencies]
felico-compiler = { path = "../compiler" }
axum = "0.7.7"
http = "1.1.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.18"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
log = "0.4.22"
tracing = "0.1.40"
hyper = "1.4.1"
http-body-util = "0.1.2"